@@ -1,8 +1,13 @@
 2007-11-21  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-operations.c:
-	Pass cancellable into strdup_with_name
+	Handle errors in remove destination
 	
+2007-11-21  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.c:
+	Pass cancellable into strdup_with_name
+
 2007-11-21  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-operations.c:
